--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     },
     "homepage": "https://github.com/MohammadJavad14/jafari-gallery#readme",
     "dependencies": {
+        "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "bootstrap": "^5.0.2",
         "colors": "^1.4.0",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-async-handler": "^1.1.4",
