--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "jsonwebtoken": "^8.5.1",
         "mogoose": "^0.0.1-security",
         "mongoose": "^5.13.3",
+        "multer": "^1.4.2",
         "react-bootstrap": "^2.0.0-beta.4",
         "react-router-bootstrap": "^0.23.3",
         "redux-devtools-extension": "^2.13.9"
