--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jsonwebtoken": "^8.5.1",
         "mogoose": "^0.0.1-security",
         "mongoose": "^5.13.3",
+        "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "react-bootstrap": "^2.0.0-beta.4",
         "react-router-bootstrap": "^0.23.3",
