prepare for deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "01-000427-jafari",
     "version": "1.0.0",
+    "engines": {
+        "node": "16.x"
+    },
     "description": "Jafari Gallery app",
     "main": "server.js",
     "type": "module",
