--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
         "react-scripts": "4.0.3",
         "redux": "^4.1.1",
         "redux-devtools-extension": "^2.13.9",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "swiper": "^6.8.3"
     },
     "scripts": {
         "start": "react-scripts start",
