--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "multer": "^1.4.2",
         "react-bootstrap": "^2.0.0-beta.4",
         "react-router-bootstrap": "^0.23.3",
-        "redux-devtools-extension": "^2.13.9"
+        "redux-devtools-extension": "^2.13.9",
+        "swiper": "^6.8.3"
     },
     "devDependencies": {
         "concurrently": "^6.2.0",
