--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "react-bootstrap": "^2.0.0-beta.4",
+        "react-loadingg": "^1.7.2",
         "react-router-bootstrap": "^0.23.3",
         "redux-devtools-extension": "^2.13.9",
         "swiper": "^6.8.3"
