--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
         "@material-ui/icons": "^4.11.2",
         "axios": "^0.21.1",
         "cra-template": "1.1.2",
+        "formik": "^2.2.9",
+        "jss": "^10.7.1",
+        "jss-rtl": "^0.3.0",
         "react": "^17.0.2",
         "react-awesome-spinners": "^1.3.1",
         "react-dom": "^17.0.2",
@@ -17,7 +20,8 @@
         "redux": "^4.1.1",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
-        "swiper": "^6.8.3"
+        "swiper": "^6.8.3",
+        "yup": "^0.32.9"
     },
     "scripts": {
         "start": "react-scripts start",
